--- a/build.gradle
+++ b/build.gradle
@@ -3,23 +3,25 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 
     ext {
-        SUPPORT_LIBRARY_VERSION = "25.3.1"
+        ANDROIDX_LIBRARY_VERSION = "1.1.0"
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
