--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdk 34
 
     defaultConfig {
-        applicationId "gr.academic.city.sdmd.snackbar"
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdk 24
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -16,11 +15,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+    buildFeatures {
+        viewBinding = true
+    }
+
+    namespace 'gr.academic.city.sdmd.snackbar'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
+    // Fix Duplicate class
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+
     implementation "androidx.appcompat:appcompat:${ANDROIDX_LIBRARY_VERSION}"
-    implementation "com.google.android.material:material:${ANDROIDX_LIBRARY_VERSION}"
+    implementation "com.google.android.material:material:${ANDROID_MATERIAL_VERSION}"
 }
